--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,28 @@
 body {
     margin: 0px;
     background-color: rgb(46, 46, 46);
-    color: white;
-    font-family: Hahmlet;
+    color: rgb(233, 239, 241);
     text-align: center;
-    font-size: .9em;
-}
-.para {
-    margin: 0 5%;
+    font-size: .95em;
+    font-family: "Catamaran";
 }
 text {
-    fill: white;
+    fill: rgb(233, 239, 241);
 }
 
-#my_dataviz {
-    position: relative;
-    margin-left: 40px;
-}
 h1 {
-    color: gold;
+    color: rgb(255, 179, 37);
     font-family: Limelight;
     margin-bottom: 0;
 }
 h2 {
-    color: gold;
+    color: rgb(255, 179, 37);
     font-family: Limelight;
     margin-bottom: 0;
     font-size: 1.5em;
 }
 h3 {
-    color: gold;
+    color: rgb(255, 179, 37);
     font-family: Limelight;
     margin-top: 0;
     margin-bottom: 7px;
@@ -69,28 +62,41 @@ svg {
 }
 
 .filmtext {
-    font-weight: 650;
+    font-weight: 450;
+    fill: rgb(245, 250, 253);
+
+}
+#centerDiv {
+    display: flex;
+    width: 100%;
+    
 }
 
 #flexbox {
-    width: 1260px;
+    width: 100%;
     display: flex;
     position: absolute;
+    justify-content: center;
+    align-items: center;
 }
 
 #flexbox .para{
-    margin: 2px 30px;
-    font-size: .9em;
-    width: 560px;
+    margin: 11px 10px;
+    width: 535px;
     order: 1;
 }
+
 #empty {
-    width: 485px;
+    width: 270px;
+    margin-top: 8px;
+    margin-left: 10px;
     order: 2;
+    font-size: .85em;
 }
 #button_container {
-    width: 130px;
+    width: 100px;
     margin-top: 10px;
+    margin-left: 225px;
     z-index: 10;
     order: 3;
 }
@@ -99,7 +105,7 @@ svg {
     background:#f5992b;
     height: 50px;
     width: 120px;
-    border-right: 1vw solid #e87411;
+    border-right: 15px solid #e87411;
     color: #fff;
     border-top-left-radius: 10%;
     border-top-right-radius: 10%;
@@ -109,10 +115,57 @@ svg {
     background:#00a1c1;
     height: 50px;
     width: 120px;
-    border-right: 1vw solid #004c6d;
+    border-right: 15px solid #004c6d;
     color: #fff;
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
     box-shadow: none;
 
+}
+
+@media (max-width: 1279px){
+    #flexbox {
+        width: 1260px;
+        display: flex;
+        position: absolute;
+    }
+    
+    #flexbox .para{
+        margin-right: 10px;
+        font-size: .9em;
+        width: 525px;
+        order: 1;
+    }
+    #empty {
+        width: 280px;
+        order: 2;
+    }
+    #button_container {
+        width: 105px;
+        margin-top: 10px;
+        margin-left: 210px;
+        z-index: 10;
+        order: 3;
+    }
+    
+    #Critic {
+        background:#f5992b;
+        height: 50px;
+        width: 120px;
+        border-right: 15px solid #e87411;
+        color: #fff;
+        border-top-left-radius: 10%;
+        border-top-right-radius: 10%;
+        box-shadow: none;
+    }
+    #Audience {
+        background:#00a1c1;
+        height: 50px;
+        width: 120px;
+        border-right: 15px solid #004c6d;
+        color: #fff;
+        border-bottom-left-radius: 10%;
+        border-bottom-right-radius: 10%;
+        box-shadow: none;
+    }
 }
