--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ svg {
     margin: 0 5%;
 }
 
+.note {
+    margin: 0 5%;
+    font-size: .8em;
+}
 
 .grid line {
     stroke: rgb(194, 194, 194);
